:wrench: [styles] fix Livechat spacing

--- a/src/styles/live-chat.scss
+++ b/src/styles/live-chat.scss
@@ -5,6 +5,10 @@
         margin-bottom: 50px;
     }
 
+    @include breakpoint-min($bp-large) {
+        margin: 80px 50px 40px;
+    }
+
     .live-chat__block {
         display: block;
         height: 100%;
